# MSY-Model

./: README.md  msy_math.py  msy_plotting.py  pyproject.toml  requirements.txt
notebooks/: lake_victoria_msy.ipynb
