[project]
name = "msy-model"
version = "0.1.0"
description = "Lake Victoria Maximum Sustainable Yield (MSY) notebook project"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "ipykernel>=6.29.5",
  "jupyterlab>=4.4.0",
  "matplotlib>=3.9.4",
  "numpy>=2.0.2",
  "pandas>=2.3.2",
]

[tool.uv]
package = false
